# TerminalCube

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
ThirdPartyLicenses/: Eigen_License.md  Eigen_Notice.txt
include/: Algorithm_Reader.h  Cube.h
src/: Algorithm_Reader.cpp  Cube.cpp  main.cpp
